Add page header
Added tag header with an h1 and hr inside

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 
 <body>
 
+
+  <header>
+    <h1>Incremental and Decremental Support Vector Machine Learning</h1>
+    <hr>
+  </header>
+
+
+
+
 </body>
 
 </html>
