Add author information section to the main content

--- a/index.html
+++ b/index.html
@@ -16,7 +16,18 @@
   </header>
 
 
+  <main>
 
+    <!-- Author information -->
+    <div>
+      <h3>Gert Lorem.</h3>
+      <span>CLSL Lorem, ipsum dolor.</span><br><br>
+      <span>Johns Hopkins University</span><br><br>
+      <span>Baltimore, MD 21218</span><br><br>
+      <em>gert@jhu.edu</em>
+    </div>
+    <!-- /Author information -->
+  </main>
 
 </body>
 
