--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
 <body>
 
 
+  <!-- Page header -->
   <header>
     <h1>Incremental and Decremental Support Vector Machine Learning</h1>
     <hr>
   </header>
+  <!-- /Page header -->
 
 
+  <!-- Page content -->
   <main>
 
     <!-- Author information -->
@@ -28,6 +31,7 @@
     </div>
     <!-- /Author information -->
   </main>
+  <!-- /Page content -->
 
 </body>
 
