Add abstract section with introduction and image to index.html

--- a/index.html
+++ b/index.html
@@ -30,6 +30,39 @@
       <em>gert@jhu.edu</em>
     </div>
     <!-- /Author information -->
+
+
+    <!-- Abstract -->
+
+    <div>
+      <h2>Abstract</h2>
+
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati recusandae ipsam molestiae, voluptate
+        fugiat nesciunt dicta alias provident reprehenderit natus laudantium veniam adipisci autem. Soluta harum maiores
+        autem assumenda! Corporis?
+      </p>
+
+      <ol>
+        <li>
+          <strong>Introduction</strong>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit, magni eum velit quo amet molestias sed
+            quasi! Molestiae ab quos minus explicabo! Amet officiis hic tenetur vitae fuga aspernatur quasi.
+          </p>
+
+          <img src="./img/optimal-hyperplane.png" alt="a graph showing the results of the algorithm">
+
+        </li>
+      </ol>
+
+    </div>
+
+    <!-- /Abstract -->
+
+
+
+
   </main>
   <!-- /Page content -->
 
