--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
   </main>
   <!-- /Page content -->
 
+  <footer>
+    <a href="https://en.wikipedia.org/wiki/Support_vector_machine" target="_blank">Go to wikipedia</a>
+  </footer>
+
+
+
 </body>
 
 </html>
